--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,52 @@
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 #signInDiv {
   float: left;
-  width: 50vw;
+  width: 49.5vw;
   height: 100vh;
-  background-color: rgb(255, 255, 255);
+  border-right: 1px solid rgb(112, 112, 112);
 }
 #signUpDiv {
-  float: right;
-  width: 50vw;
+  /* float: right; */
+  width: 49.5vw;
   height: 100vh;
-  background-color: rgb(222, 222, 222);
+}
+
+.title {
+  text-align: center;
+  font-size: 24px;
+  padding: 100px 0px 20px 0px;
+  text-transform: uppercase;
+}
+input {
+  display: block;
+  margin: 0 auto;
+  padding: 5px;
+  margin-top: 15px;
+  border-right: none;
+  width: 200px;
+  border-top: none;
+  border-left: none;
+  border-bottom: 0.8px solid rgb(151, 151, 151);
+}
+input:focus {
+  outline: none !important;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+  border: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  margin-top: 20px;
+  border-radius: 2px;
+  background-color: rgb(233, 233, 233);
+}
+.errors {
+  font-size: 12px;
+  color: red;
+  margin: 0.2vw 0vw 0.2vw 18vw;
 }
