--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,35 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 #signInDiv {
-  float: left;
-  width: 49.5vw;
-  height: 100vh;
-  border-right: 1px solid rgb(112, 112, 112);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 70vw;
+  height: 90vh;
 }
 #signUpDiv {
-  /* float: right; */
-  width: 49.5vw;
-  height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70vw;
+  height: 90vh;
 }
 
 .title {
   text-align: center;
-  font-size: 24px;
-  padding: 100px 0px 20px 0px;
+  font-size: 28px;
+  padding: 80px 0px 0px 0px;
   text-transform: uppercase;
 }
 input {
   display: block;
   margin: 0 auto;
-  padding: 5px;
-  margin-top: 15px;
+  padding: 10px;
+  margin-top: 10px;
   border-right: none;
-  width: 200px;
+  width: 240px;
   border-top: none;
+  color: rgb(117, 117, 117);
+  font-size: 20px;
   border-left: none;
   border-bottom: 0.8px solid rgb(151, 151, 151);
 }
@@ -48,5 +52,5 @@ button {
 .errors {
   font-size: 12px;
   color: red;
-  margin: 0.2vw 0vw 0.2vw 18vw;
+  margin: 0.2vw 0vw 0.2vw 26.5vw;
 }
