--- a/src/pages/BlogPage/Blog.css
+++ b/src/pages/BlogPage/Blog.css
@@ -5,9 +5,7 @@
     font-size: 38px;
     line-height: 60px;
     display: flex;
-    /* align-items: center; */
     text-align: center;
-    padding-top: 90px;
     color: #000000;
 
   }
@@ -33,11 +31,10 @@ color: #6D7D8B;
       margin-left: 100px;
       margin-bottom: 60px;
       margin-top:20px;
-
-      /* margin-right: 30px; */
     }
     #imagePeopleTalking{
-      border-top-left-radius: 20px;  border-top-right-radius: 20px;
+      border-top-left-radius: 20px;  
+      border-top-right-radius: 20px;
     }
     .blogHeader{
   font-weight: 600;
@@ -71,4 +68,29 @@ font-weight: 600;
     #avatarDiv p{
       padding-top: 20px; 
       padding-right: 16px;
+    }
+    #searchAndTitle{
+      display: flex;
+      align-items: center;
+      padding-top: 60px;
+    }
+    .search-form {
+      width: 150px;
+      font-size: 13px;
+      margin-left: 44vw;
+    }
+    .search-form input {
+      text-align: center;
+      background-color: rgb(255, 255, 255,0.4);
+      color: #262626;
+      border: 1px solid rgb(114, 114, 114);
+    }
+    .blogDivPointer{
+      cursor: pointer;
+    }
+    #blogSpacing{
+      display: flex;
+      flex-flow: row wrap;
+      width: 90vw;
+      margin-left: 40px;
     }
