--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -98,6 +98,7 @@
   #secondPage {
     background-color: white;
     height: 100vh;
+    display: flex;
   }
   .header {
     font-weight: 800;
@@ -345,4 +346,20 @@
       position: absolute;
       padding-top: 150px;
       padding-left: 280px;
+    }
+    #page2Meeting{
+      position: absolute; 
+      left: 298px; 
+      top: 60px; 
+    }
+    #iconPositions{
+      position: absolute;
+      left: 330px;
+      top: 100px;
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 0px;
+    }
+    #simpleTask{
+      margin-left: 90vh;
     }
