--- a/src/pages/UsersPage/UsersPage.css
+++ b/src/pages/UsersPage/UsersPage.css
@@ -4,8 +4,7 @@
   font-weight: 600;
   border-radius: 5px;
   margin: 0 auto;
-  margin-bottom: 30px;
-  margin-top: 60px;
+  margin: 60px 0px 30px 95px;
   cursor: pointer;
   background-color: white;
   -moz-box-shadow: 3px 3px 3px rgb(104, 104, 104);
@@ -28,6 +27,8 @@
 
 #wholeUserDiv {
   padding: 30px 70px 70px 70px;
+  flex-wrap: wrap;
+  display: flex;
   background-color: #d7ddf2;
 }
 #imgDiv {
@@ -37,11 +38,9 @@
 #userDivs:hover {
   transform: scale(1.02);
 }
-.usersButton {
-  display: flex;
-  justify-content: space-evenly;
-  margin-left: 34vw;
-  margin-right: 34vw;
+.usersButton button{
+  margin-left: 100px;
+  
   align-items: center;
 }
 #updateDiv {
@@ -53,4 +52,8 @@
   align-items: center;
   vertical-align: middle;
   display: flex;
+}
+
+#createDiv {
+  height: 330px;
 }
