--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -4,7 +4,6 @@
   margin: 30px;
   font-weight: 600;
   border-radius: 8px;
-  margin-left: 70px;
   cursor: pointer;
   background-color: white;
   -moz-box-shadow: 3px 3px 3px rgb(104, 104, 104);
@@ -20,8 +19,9 @@
   transform: scale(1.02);
 }
 #wholeProductDiv {
-  display: flex;
-  padding: 30px 70px 70px 70px;
+  display: flex;  margin-left: auto;
+  margin-right: auto;
+  /* padding: 30px 70px 70px 70px; */
   flex-wrap: wrap;
 }
 #productsPage {
@@ -101,10 +101,15 @@ button {
   height: 380px;
   padding-left: 30px;
 }
-#loading{
+#loading {
   color: white;
   font-weight: 600;
   padding-top: 60px;
   font-size: 25px;
   padding-left: 150px;
+}
+.createButtonSearch {
+  display: flex;
+  justify-content: space-between;
+  width: 85vw;
 }
