--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -25,7 +25,7 @@
   align-items: center;
 }
 #navBarRight {
-  margin-left: 42vw;
+  margin-left: 42%;
   font-weight: 600;
   justify-content: space-between;
   display: flex;
@@ -33,7 +33,7 @@
   width: 30vw;
 }
 #navBarRight1 {
-  margin-left: 42vw;
+  margin-left: 42%;
   font-weight: 600;
   justify-content: space-between;
   display: flex;
@@ -49,8 +49,10 @@
   border-radius: 2px;
   border: 1px solid rgb(173, 173, 173);
 }
+#firstPageLeftSpace {
+  padding-left: 10%;
+}
 #collab {
-  margin-left: 124px;
   padding-top: 20vh;
   width: 514px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -70,7 +72,6 @@
   color: #ffffff;
   width: 323.85px;
   height: 58px;
-  margin-left: 124px;
   letter-spacing: 0.5px;
   line-height: 22px;
   margin-top: 24px;
@@ -81,7 +82,6 @@
 #inputs {
   border: 2px solid #bbc8d4;
   border-radius: 4px;
-  margin-left: 124px;
   margin-top: 55px;
 }
 #buttons {
@@ -112,7 +112,6 @@
   color: #000000;
   width: 398px;
   height: 120px;
-  margin-left: 140px;
   padding-top: 206px;
 }
 .paragraph {
@@ -125,7 +124,6 @@
   width: 435px;
   color: #182d40;
   height: 145px;
-  margin-left: 140px;
   margin-top: 3px;
 }
 .learnMore {
@@ -135,14 +133,17 @@
   display: flex;
   align-items: center;
   text-decoration-line: underline;
-  margin-left: 142px;
   margin-top: 18px;
   color: #4da0fd;
   cursor: pointer;
 }
+#page2Paragraph {
+  padding-left: 10%;
+}
 #thirdPage {
   background-color: white;
   height: 100vh;
+  justify-content: space-between;
   display: flex;
 }
 #img3 {
@@ -150,10 +151,7 @@
   transform: matrix(-1, 0, 0, 1, 0, 0);
   height: 440px;
   padding-top: 20vh;
-  position: absolute;
-  left: 0px;
-  /* top: 0px; */
-  z-index: 0;
+  padding-left: 25px;
 }
 #fourthPage {
   background-color: white;
@@ -184,8 +182,13 @@
   height: 100vh;
   /* display: flex; */
 }
+#simpleTask {
+  padding-right: 15%;
+  padding-top: 40px;
+}
 #footer {
-  height: 376px;
+  height: 50vh;
+  width: 100vw;
   background-color: rgba(37, 43, 59, 1);
 }
 .columns {
@@ -196,7 +199,7 @@
 
   padding-top: 35px;
   padding-bottom: 25px;
-  padding-left: 169px;
+  padding-left: 10%;
   color: #ffffff;
 }
 #logo2 {
@@ -213,7 +216,6 @@
 }
 #allColumns {
   display: flex;
-  justify-content: space-between;
 }
 .firstP {
   padding-bottom: 25px;
@@ -314,22 +316,22 @@
   color: #ffffff;
   padding-top: 5px;
 }
-#event2 {
+/* #event2 {
   position: absolute;
   z-index: 1;
   padding-top: 160px;
-  padding-left: 350px;
+margin-left: -40%;
 }
 #event3 {
   position: absolute;
   z-index: 1;
   padding-top: 290px;
-  padding-left: 350px;
-}
+  margin-left: -40%;
+} */
 #meetingIcon {
-  position: absolute;
-  z-index: 0;
-  padding-left: 500px;
+  /* position: absolute; */
+  /* z-index: 0; */
+  /* right: 0px; */
   /* padding-left: 350px; */
 }
 #calendarIcon {
@@ -343,6 +345,8 @@
   z-index: 1;
   padding: 0px;
   margin: 0px;
+  position: absolute;
+  left: 0;
   background-color: white;
   /* padding-top: 160px; */
 }
@@ -356,19 +360,58 @@
   padding-top: 150px;
   padding-left: 280px;
 }
-#page2Meeting {
+/* #page2Meeting {
   position: absolute;
   left: 298px;
   top: 60px;
-}
+} */
 #iconPositions {
   position: absolute;
-  left: 330px;
   top: 100px;
-  border: 1px solid black;
   border-radius: 10px;
   padding: 0px;
 }
-#simpleTask {
-  margin-left: 90vh;
+
+#thirdpageImgDiv {
+  left: 0;
+}
+@media (max-width: 950px) {
+  .columns {
+    padding-left: 5%;
+    font-size: 12px;
+  }
+  #allColumns {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #navBarRight {
+    margin-left: 38%;
+  }
+  #navBarRight1 {
+    margin-left: 38%;
+  }
+}
+@media (max-width: 600px) {
+  #allColumns {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .columns {
+    padding-left: 2%;
+    font-size: 10px;
+  }
+  #footer {
+    height: 500px;
+  }
+  #navBarRight {
+    margin-left: 6%;
+    width: 62%;
+  }
+  #navBarRight1 {
+    margin-left: 6%;
+    width: 62%;
+  }
+  #teamIcon {
+    padding-left: 34px;
+  }
 }
