--- a/src/pages/UsersPage/UsersPage.css
+++ b/src/pages/UsersPage/UsersPage.css
@@ -1,10 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 #userDivs {
   width: 320px;
   height: 380px;
   font-weight: 600;
   border-radius: 5px;
-  margin: 0 auto;
-  margin: 60px 0px 30px 95px;
+  margin: 30px;
   cursor: pointer;
   background-color: white;
   -moz-box-shadow: 3px 3px 3px rgb(104, 104, 104);
@@ -26,10 +29,10 @@
 }
 
 #wholeUserDiv {
-  padding: 30px 70px 70px 70px;
-  flex-wrap: wrap;
   display: flex;
-  background-color: #d7ddf2;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: wrap;
 }
 #imgDiv {
   padding-top: 60px;
@@ -38,9 +41,9 @@
 #userDivs:hover {
   transform: scale(1.02);
 }
-.usersButton button{
+.usersButton button {
   margin-left: 100px;
-  
+
   align-items: center;
 }
 #updateDiv {
@@ -56,4 +59,9 @@
 
 #createDiv {
   height: 330px;
+}
+#createButtonSearch {
+  display: flex;
+  justify-content: space-between;
+  width: 85vw;
 }
