--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -107,11 +107,10 @@
   line-height: 60px;
   display: flex;
   align-items: center;
-
   color: #000000;
   width: 398px;
   height: 120px;
-  padding-top: 206px;
+  padding-top: 30%;
 }
 .paragraph {
   font-style: normal;
@@ -300,7 +299,7 @@
   height: 50px;
   text-align: center;
   color: #ffffff;
-  padding-left: 104px;
+  padding-left: 0px;
   cursor: pointer;
   padding-top: 55px;
 }
@@ -422,7 +421,7 @@
     padding-left: 2%;
     font-size: 10px;
   }
-  #fourthPage{
+  #fourthPage {
     justify-content: center;
   }
   #footer {
@@ -435,9 +434,6 @@
   #navBarRight1 {
     margin-left: 6%;
     width: 62%;
-  }
-  #teamIcon {
-    padding-left: 34px;
   }
   .header {
     font-size: 24px;
