--- a/src/pages/BlogPage/BlogPage.css
+++ b/src/pages/BlogPage/BlogPage.css
@@ -1,5 +1,5 @@
 #blogPosts {
-  margin-left: 120px;
+  margin-left: 10%;
   font-weight: 800;
   font-size: 38px;
   line-height: 60px;
@@ -12,7 +12,7 @@
 }
 
 #blogParagraph {
-  margin-left: 120px;
+  margin-left: 10%;
   font-weight: 500;
   font-size: 14px;
   line-height: 29px;
@@ -70,12 +70,12 @@
 #searchAndTitle {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-top: 60px;
 }
 .search-form {
-  width: 150px;
   font-size: 13px;
-  margin-left: 44vw;
+  padding-right: 14vw;
 }
 .search-form input {
   text-align: center;
