--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -299,7 +299,7 @@
   height: 50px;
   text-align: center;
   color: #ffffff;
-  padding-left: 0px;
+  padding-left: 10%;
   cursor: pointer;
   padding-top: 55px;
 }
@@ -362,10 +362,14 @@
 #iconPositions {
   position: absolute;
   top: 100px;
+
   border-radius: 10px;
   padding: 0px;
 }
-
+#schedulingWorks{
+  padding-left: 6%;
+  width: 25%;
+}
 #thirdpageImgDiv {
   left: 0;
 }
