--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -1,11 +1,12 @@
 #contactPage {
-  background-color: rgb(98, 74, 236);
-height: 100vh;
+  background-color: #f5f7fa;
+  height: 100vh;
 }
 #contactDiv {
   position: absolute;
   left: 50%;
   top: 50%;
+  border: 0.8px solid #3e3e3f;
   transform: translate(-50%, -50%);
   padding: 10px;
   width: 30vw;
@@ -19,14 +20,12 @@ height: 100vh;
   font-size: 24px;
   padding: 80px 0px 0px 0px;
 }
-#howWeCanHelp{
-    padding-bottom: 80px;
+#howWeCanHelp {
+  padding-bottom: 80px;
 }
 
 @media (max-width: 850px) {
   #contactDiv {
     width: 58vw;
-
   }
-
 }
