--- a/src/pages/SignUp/CreatedAccount/CreatedAccountBox.css
+++ b/src/pages/SignUp/CreatedAccount/CreatedAccountBox.css
@@ -23,7 +23,7 @@
   margin-top: 20px;
   padding: 10px;
   width: 200px;
-  background-color: rgb(91, 66, 233);
+  background-color: #576583;
   height: 45px;
   margin-top: 20px;
   color: white;
