--- a/src/pages/ArticlePage/ArticlePage.css
+++ b/src/pages/ArticlePage/ArticlePage.css
@@ -1,22 +1,3 @@
-#articleTitle {
-  font-weight: 800;
-  font-size: 32px;
-  line-height: 80px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  padding: 100px 0px 20px 21%;
-  color: #25313c;
-}
-
-#articleAvatarDiv {
-  display: flex;
-  align-items: center;
-  width: 600px;
-  color: #6d7d8b;
-  font-size: 14px;
-  padding-left: 22%;
-}
 #articleAvatarDiv p {
   padding-left: 30px;
   margin-left: 30px;
@@ -55,13 +36,13 @@
   font-size: 12px;
   padding-bottom: 5px;
   padding-left: 15px;
+  padding-top: 15px;
 }
 #writtenByName {
   font-weight: 500;
   color: #25313c;
   font-size: 18px;
   padding-bottom: 5px;
-
   padding-left: 15px;
 }
 #personTitle {
@@ -75,6 +56,7 @@
 #commentDiv {
   border-top: 1px solid rgba(109, 125, 139, 0.22);
   width: 52vw;
+  height: 500px;
   margin-left: 22%;
 }
 #joinConvo {
@@ -83,21 +65,7 @@
   padding-top: 40px;
   padding-bottom: 15px;
 }
-#comment {
-  display: flex;
-}
-#commentInput {
-  background: #ffffff;
-  width: 95%;
-  height: 148px;
-  position: relative;
-  bottom: 60px;
-  border-radius: 4px;
-  margin-left: 0px;
-  font-size: 14px;
-  border: 2px solid #bbc8d4;
-  border-radius: 4px;
-}
+
 
 @media (max-width: 850px) {
   #articleTitle {
