--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -25,20 +25,20 @@
   align-items: center;
 }
 #navBarRight {
-  margin-left: 42%;
+  margin-left: 54%;
   font-weight: 600;
   justify-content: space-between;
   display: flex;
   padding-top: 30px;
-  width: 30vw;
+  width: 20vw;
 }
 #navBarRight1 {
-  margin-left: 42%;
+  margin-left: 54%;
   font-weight: 600;
   justify-content: space-between;
   display: flex;
   padding-top: 30px;
-  width: 30vw;
+  width: 20vw;
 }
 #navBarRight #getAccessButton {
   background-color: rgb(243, 243, 243, 0);
@@ -51,6 +51,39 @@
 }
 #firstPageLeftSpace {
   padding-left: 10%;
+}
+#postsDivs {
+  height: 90%;
+  margin: 30px;
+  width: 20vw;
+  font-weight: 600;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: white;
+  -moz-box-shadow: 3px 3px 3px rgb(104, 104, 104);
+  -webkit-box-shadow: 3px 3px 3px rgb(104, 104, 104);
+  box-shadow: 3px 3px 3px rgb(104, 104, 104);
+}
+#five {
+  display: flex;
+  overflow-y: scroll;
+  margin: 80px 0px;
+}
+.seeMoreButton {
+  float: right;
+}
+#five div {
+  margin-right: 20px;
+  padding-left: 3px;
+}
+#textDiv {
+  width: 90%;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 10px;
+
+  min-width: 0;
+  padding-bottom: 20px;
 }
 #collab {
   padding-top: 20vh;
@@ -196,8 +229,6 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 30px;
-  /* identical to box height, or 193% */
-
   padding-top: 35px;
   padding-bottom: 25px;
   padding-left: 10%;
@@ -238,23 +269,7 @@
   margin-left: 85px;
   margin-top: 15px;
 }
-#five {
-  display: flex;
-  width: 95vw;
-  overflow: auto;
-  margin: 0 auto;
-}
-.boxes {
-  margin-top: 100px;
-  width: 326px;
-  margin-left: 80px;
-  font-size: 15px;
-  line-height: 25px;
-  /* display: flex; */
-  align-items: center;
-  height: 344px;
-  border: 0.2px solid black;
-}
+
 .reviews {
   padding-left: 35px;
   padding-right: 35px;
@@ -354,11 +369,6 @@
   padding-top: 150px;
   padding-left: 280px;
 }
-/* #page2Meeting {
-  position: absolute;
-  left: 298px;
-  top: 60px;
-} */
 #iconPositions {
   position: absolute;
   top: 100px;
@@ -366,7 +376,7 @@
   border-radius: 10px;
   padding: 0px;
 }
-#schedulingWorks{
+#schedulingWorks {
   padding-left: 6%;
   width: 25%;
 }
@@ -384,9 +394,14 @@
   }
   #navBarRight {
     margin-left: 38%;
+    width: 30vw;
+  }
+  #postsDivs {
+    width: 35vw;
   }
   #navBarRight1 {
     margin-left: 38%;
+    width: 30vw;
   }
   .paragraph {
     font-size: 13px;
@@ -407,6 +422,9 @@
   }
   #simpleTask {
     padding-right: 0px;
+  }
+  #navBar1 button {
+    top: 20vh;
   }
 }
 
@@ -449,5 +467,8 @@
   .paragraph {
     font-size: 10px;
     width: 200px;
+  }
+  #postsDivs {
+    width: 66vw;
   }
 }
